demo2/ingress-service-deployment-app-gw1.yml
apiVersion: v1
kind: Pod
metadata:
  name: aksdemo
  labels:
    app: aksdemo
spec:
  containers:
  - image: blaize/aksdemo
    name: aksdemo-image
    ports:
    - containerPort: 3000
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: aksdemo
spec:
  selector:
    app: aksdemo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aksdemo
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:
  rules:
  - http:
      paths:
      - path: /app1
        backend:
          serviceName: aksdemo
          servicePort: 80
